--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node -r dotenv/config server.js",
-    "migrate": "DATABASE_URL=postgres://postgres:mypw@localhost/postgres node-pg-migrate"
+    "migrate": "DATABASE_URL=postgres://postgres:mypw@localhost/postgres node-pg-migrate",
+    "migrate:windows": "SET DATABASE_URL=postgres://postgres:mypw@localhost/postgres&& node-pg-migrate"
   },
   "repository": {
     "type": "git",
