--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "nodemailer": "^6.4.6",
-    "pg": "^8.0.3"
+    "pg": "^8.0.3",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
